--- a/ProjetoGuru/ProjetoGuru/bin/ProjetoGuru.dll.config
+++ b/ProjetoGuru/ProjetoGuru/bin/ProjetoGuru.dll.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ProjetoGuru-20150717050429.mdf;Initial Catalog=aspnet-ProjetoGuru-20150717050429;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="Conexao" connectionString="data source=172.16.200.106;initial catalog=projetosinternos-guru-1;persist security info=True;user id=guru-1;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Conexao" connectionString="data source=172.16.200.106;initial catalog=projetosinternos-guru-1;persist security info=True;user id=guru-1; Password=g1@2015!;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
