--- a/ProjetoGuru2.0/ProjetoGuru/ProjetoGuru.csproj
+++ b/ProjetoGuru2.0/ProjetoGuru/ProjetoGuru.csproj
@@ -193,7 +193,14 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PerguntaController.cs" />
+    <Compile Include="Controllers\RespostaController.cs" />
+    <Compile Include="Controllers\UsuarioCategoriaController.cs" />
+    <Compile Include="Controllers\UsuarioController.cs" />
+    <Compile Include="Controllers\UsuarioCreditoController.cs" />
+    <Compile Include="Controllers\UsuarioTipoController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -296,23 +303,18 @@
     <Content Include="Views\Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Views\Login\Create.cshtml" />
-    <Content Include="Views\Login\Delete.cshtml" />
-    <Content Include="Views\Login\Details.cshtml" />
-    <Content Include="Views\Login\Edit.cshtml" />
-    <Content Include="Views\Login\Index.cshtml" />
-    <Content Include="Views\bla\Create.cshtml" />
-    <Content Include="Views\bla\Delete.cshtml" />
-    <Content Include="Views\bla\Details.cshtml" />
-    <Content Include="Views\bla\Edit.cshtml" />
-    <Content Include="Views\bla\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Filters\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Administrador\" />
-    <Folder Include="Views\Guru\" />
+    <Folder Include="Views\Categoria\" />
+    <Folder Include="Views\Default\" />
+    <Folder Include="Views\Pergunta\" />
+    <Folder Include="Views\Resposta\" />
+    <Folder Include="Views\UsuarioCategoria\" />
+    <Folder Include="Views\UsuarioCredito\" />
+    <Folder Include="Views\UsuarioTipo\" />
     <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
