--- a/ProjetoGuru2.0/Admin/Admin.csproj
+++ b/ProjetoGuru2.0/Admin/Admin.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CategoriaViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -251,6 +252,16 @@
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Areas\Consultor\Views\Web.config" />
+    <Content Include="Areas\Consultor\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Consultor\Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Areas\Consultor\Views\Shared\Error.cshtml" />
+    <Content Include="Areas\Consultor\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Administrador\Views\Web.config" />
+    <Content Include="Areas\Administrador\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\Administrador\Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Areas\Administrador\Views\Shared\Error.cshtml" />
+    <Content Include="Areas\Administrador\Views\_ViewStart.cshtml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
@@ -299,10 +310,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Administrador\" />
-    <Folder Include="Areas\Consultor\" />
+    <Folder Include="Areas\Administrador\Controllers\" />
+    <Folder Include="Areas\Administrador\Models\" />
+    <Folder Include="Areas\Consultor\Controllers\" />
+    <Folder Include="Areas\Consultor\Models\" />
     <Folder Include="Filters\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
